--- a/PastebinInVS/Windows/SettingsWindow.xaml
+++ b/PastebinInVS/Windows/SettingsWindow.xaml
@@ -5,10 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PastebinInVS.Windows"
              mc:Ignorable="d" 
-             Width="500" Height="200"
+             Width="500" Height="210"
              Title="Pastebin in VS" ResizeMode="NoResize"
              Loaded="Window_Loaded">
-    <Grid>
+    <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="130"/>
             <RowDefinition Height="70"/>
